--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,19 @@ spring.datasource.password=nokian876
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
-
-
-logging.level.org.springframework=debug
 spring.jpa.show-sql=true
+
+# Logging configuration
+logging.level.org.springframework=info
+logging.level.com.StudentLibrary=debug
+
+# Book configuration
 books.max_allowed=3
 books.max_allowed_days=15
 books.fine.per_day=5
+
+# Server configuration
+server.port=8080
+spring.application.name=student-library
 
 
