--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:6900/library
-spring.datasource.username=ypathan
-spring.datasource.password=nokian876
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Theflash456*
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -18,5 +18,3 @@ books.fine.per_day=5
 # Server configuration
 server.port=8080
 spring.application.name=student-library
-
-
