--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,10 @@ books.fine.per_day=5
 # Server configuration
 server.port=8080
 spring.application.name=student-library
+
+# File upload configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Hibernate configuration for large objects
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
